// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicyDropdown component should hide policies that the user cant select 1`] = `
<SelectFieldWrapper
  MenuProps={
    Object {
      "data-testid": "test-policy-options",
      "id": "test-policy-options",
    }
  }
  SelectDisplayProps={
    Object {
      "data-testid": "test-policy-select",
      "id": "test-policy-select",
    }
  }
  inputId="test-policy-input"
  label="Record level policy to apply to this PID"
  labelId="test-policy-label"
  name="test"
  required={true}
  validation={
    Array [
      [Function],
    ]
  }
>
  <WithStyles(ForwardRef(MenuItem))
    disabled={false}
    key="0"
    value={1}
  >
    Administrators
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={false}
    key="1"
    value={2}
  >
    Theses Assessors
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={true}
    key="2"
    value={3}
  >
    Evidence Assessors
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={true}
    key="3"
    value={4}
  >
    Staff and Students
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={true}
    key="4"
    value={5}
  >
    Public
  </WithStyles(ForwardRef(MenuItem))>
</SelectFieldWrapper>
`;

exports[`PolicyDropdown component should render properly 1`] = `
<SelectFieldWrapper
  MenuProps={
    Object {
      "data-testid": "test-policy-options",
      "id": "test-policy-options",
    }
  }
  SelectDisplayProps={
    Object {
      "data-testid": "test-policy-select",
      "id": "test-policy-select",
    }
  }
  inputId="test-policy-input"
  label="Record level policy to apply to this PID"
  labelId="test-policy-label"
  name="test"
  required={true}
  validation={
    Array [
      [Function],
    ]
  }
>
  <WithStyles(ForwardRef(MenuItem))
    disabled={true}
    value=""
  />
  <WithStyles(ForwardRef(MenuItem))
    disabled={false}
    key="0"
    value={1}
  >
    Administrators
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={false}
    key="1"
    value={2}
  >
    Theses Assessors
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={false}
    key="2"
    value={3}
  >
    Evidence Assessors
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={false}
    key="3"
    value={4}
  >
    Staff and Students
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    disabled={false}
    key="4"
    value={5}
  >
    Public
  </WithStyles(ForwardRef(MenuItem))>
</SelectFieldWrapper>
`;
